# Truffles-AI-Employee

./: .env  .gitignore  AGENTS.md  CHANGELOG.md  CHATGPT_QUESTIONS_ANSWERS.md  HOW_TO_WORK.md  PROJECT_PLAN.md  ROADMAP.md  STATE.md  STRUCTURE.md  SUMMARY.md  TECH.md  create_workflow.py  docker-compose.yml  prompt.txt
Business/: FAQ.md  (+8 more)
truffles-api/: .env.example  Dockerfile  check_client.sql  check_prompts.sql  check_truffles_prompt.sql  docker-compose.yml  pyproject.toml  requirements.txt  reset_state.sql  test_bge.py  test_qdrant.py  test_request.json  test_search.py  test_slugs.py  test_update.sql
truffles-api/app/: config.py  learning_service.py  logging_config.py  main.py  test_learning_service.py  webhook.py
truffles-api/app/models/: __init__.py  agent.py  agent_identity.py  branch.py  client.py  client_settings.py  company.py  conversation.py  handover.py  learned_response.py  message.py  outbox_message.py  prompt.py  user.py
truffles-api/app/routers/: __init__.py  admin.py  alerts.py  callback.py  message.py  reminders.py  telegram_webhook.py  webhook.py
truffles-api/migrations/: 001_add_state.sql  002_add_companies.sql  003_add_state_constraint.sql  add_reminder_settings.sql
truffles-api/tests/: conftest.py  test_ai_service.py  test_alert_service.py  test_callback.py  test_cases.json  test_demo_salon_eval.py  test_escalation.py  test_health_service.py  test_intent.py  test_knowledge_service.py  test_learning_service.py  test_message_endpoint.py  test_reminders.py  test_result.py  test_state_machine.py  test_state_service.py  test_telegram_webhook.py
(+536 files in other folders)
