[project]
name = "truffles-api"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line too long
    "E712",  # comparison to True (SQLAlchemy uses this)
    "W293",  # blank line contains whitespace (docstrings)
    "F401",  # unused imports (re-exports in __init__.py)
    "F841",  # local variable assigned but never used
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
